--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">StateFlowTutorial</string>
     <string name="hello_flow">Hello Flow!</string>
+    <string name="error">Ops… something is wrong!</string>
+    <string name="button_get_something">Get Something</string>
 </resources>
